fix get location too long

--- a/styles/HeaderStyle.scss
+++ b/styles/HeaderStyle.scss
@@ -45,33 +45,17 @@
 }
 
 .HeaderUserProfileImageSM {
-  width: 35px;
-  height: 35px;
-  margin: 4px;
   border-radius: 100px;
-  background-color: $color-white;
+  background-color: $color-gray;
   border-width: 1px;
   border-color: $color-medium-blue;
 }
 
 .HeaderUserProfileImage {
-  width: 50px;
-  height: 50px;
-  margin: 8px;
   border-radius: 100px;
-  background-color: $color-white;
+  background-color: $color-gray;
   border-width: 1px;
   border-color: $color-medium-blue;
-}
-
-.HeaderUserBellSM {
-  width: 25px;
-  height: 25px;
-}
-
-.HeaderUserBell {
-  width: 35px;
-  height: 35px;
 }
 
 .HeaderBlackTitle1SM {
@@ -84,11 +68,6 @@
   color: $color-main;
 }
 
-.HeaderTitle1SM {
-  font-size: 12px;
-  font-family: $century-bold;
-  color: $color-white;
-}
 .HeaderTitle1Blue {
   font-size: 16px;
   font-family: $century-bold;
@@ -101,19 +80,11 @@
 }
 
 .HeaderTitle1 {
-  font-size: 20px;
   font-family: $century-bold;
   color: $color-white;
 }
 
-.HeaderTitle2SM {
-  font-size: 14px;
-  font-family: $century-regular-italic;
-  color: $color-white;
-}
-
 .HeaderTitle2 {
-  font-size: 13px;
   font-family: $century-regular-italic;
   color: $color-white;
 }
@@ -127,13 +98,10 @@
 }
 
 .HeaderTitleContainerSM {
-  height: 35px;
   justify-content: space-between;
-  padding: 5px;
 }
 
 .HeaderTitleContainer {
-  height: 50px;
   justify-content: space-between;
   padding: 0px;
 }
