--- a/styles/ModalStyle.scss
+++ b/styles/ModalStyle.scss
@@ -71,10 +71,12 @@
 .ModalButtonTextBodySM {
   font-size: 10px;
   font-family: $century-regular;
+  text-align: center;
 }
 
 .ModalButtonTextBody {
   font-family: $century-regular;
+  text-align: center;
 }
 
 .ModalButtonOptionContainer {
